# meeting-room

./: .gitignore  README.md
circle-time/backend/: .env.example  .gitignore  Circle-Time.postman_collection.json  README.md  api-tests.http  pyproject.toml  requirements.txt  seed.py
circle-time/backend/accounts/: admin.py  models.py  oauth_providers.py  serializers.py  urls.py  views.py
circle-time/backend/accounts/migrations/: 0001_initial.py  0002_userinvitation.py  0003_calendartoken.py  0004_expand_token_field.py
circle-time/backend/analytics/: admin.py  models.py  urls.py  views.py
circle-time/backend/apps/accounts/: admin.py  authentication.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
circle-time/backend/apps/analytics/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
circle-time/backend/apps/bookings/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
circle-time/backend/apps/core/: responses.py
circle-time/backend/apps/panel/: admin.py  (+8 more)
circle-time/backend/bookings/: admin.py  constants.py  emails.py  models.py  serializers.py  urls.py  utils.py  views.py
circle-time/backend/config/: asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
circle-time/backend/organisation/: admin.py  models.py  urls.py  views.py
circle-time/backend/panel/: admin.py  models.py  urls.py  views.py
circle-time/backend/providers/: gateway.py  google_adapter.py  zoho_adapter.py
circle-time/backend/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
(+130 files in other folders)
